Finished the increase/decrease buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div>Grid Size: 
+        <span id="num">5</span>
+    </div>
+    <div>
+        <button id="increase">Increase</button>
+        <button id="decrease">Decrease</button>
+    </div>
     <div class="container">
     </div>
 </body>
